--- a/react-ts/package.json
+++ b/react-ts/package.json
@@ -14,11 +14,18 @@
         "@types/node": "^16.18.113",
         "@types/react": "^18.3.11",
         "@types/react-dom": "^18.3.1",
+        "@types/websocket": "^1.0.10",
+        "@vercel/speed-insights": "^1.1.0",
         "axios": "^1.7.7",
+        "html2pdf.js": "^0.10.2",
+        "primeflex": "^3.3.1",
+        "primereact": "^10.8.4",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.27.0",
         "react-scripts": "^5.0.1",
+        "remove.bg": "^1.3.0",
+        "tailwind-merge": "^2.5.4",
         "typescript": "^4.9.5",
         "web-vitals": "^2.1.4"
     },
