--- a/react-ts/package.json
+++ b/react-ts/package.json
@@ -15,6 +15,7 @@
         "@types/react": "^18.3.11",
         "@types/react-dom": "^18.3.1",
         "@types/websocket": "^1.0.10",
+        "@vercel/analytics": "^1.5.0",
         "@vercel/speed-insights": "^1.2.0",
         "axios": "^1.7.7",
         "html2pdf.js": "^0.10.2",
